--- a/duoduo-weather/miniprogram/pages/index/index.wxss
+++ b/duoduo-weather/miniprogram/pages/index/index.wxss
@@ -1,8 +1,11 @@
 /**index.wxss**/
 
 page {
-  background: #f6f6f6;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  background: linear-gradient(#4990e2,#87c1f1)
+}
+.container{
+  background: #f6f6f6;
 }
