利用微信内置的scroll-view来给下半部分设置滚动条

--- a/duoduo-weather/miniprogram/pages/index/index.wxml
+++ b/duoduo-weather/miniprogram/pages/index/index.wxml
@@ -1,12 +1,15 @@
 <!--index.wxml-->
 <view class="container">
   <view class="top"></view>
-  <view class="list">
-    <view class="list_item list_item_alter" ></view>
-    <view class="list_item"></view>
-    <view class="list_item list_item_alter"></view>
-    <view class="list_item"></view>
-    <view class="list_item list_item_alter"></view>
-    <view class="list_item"></view>
-  </view>
+  <scroll-view scroll-y style="height:300px;">
+    <view class="list">
+      <view class="list_item list_item_alter" ></view>
+      <view class="list_item"></view>
+      <view class="list_item list_item_alter"></view>
+      <view class="list_item"></view>
+      <view class="list_item list_item_alter"></view>
+      <view class="list_item"></view>
+    </view>
+  </scroll-view>
+  
 </view>
